--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-    "outputDirectory": "dist",
-    "framework": "vite"
+    "installCommand": "npm install",
+    "buildCommand": "./node_modules/.bin/vite build",
+    "outputDirectory": "dist"
 }
