--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "vite": "^5.4.8"
+    "vite": "5.4.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
